k8s/base/http/shopify-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopify-proxy-ingress
  namespace: http
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shopify.nicolatomassoni.it
      secretName: shopify-proxy-tls
  rules:
  - host: "shopify.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopify-proxy-service
            port:
              number: 443
